Add people list

--- a/src/main/webapp/resources/css/welcome.css
+++ b/src/main/webapp/resources/css/welcome.css
@@ -67,7 +67,7 @@ footer {
 
 .column-left2 {
     float: left;
-    width: 70%;
+    width: 50%;
     padding: 10px;
 }
 
@@ -83,6 +83,11 @@ footer {
     padding: 10px;
 }
 
+.column-right2 {
+    float: left;
+    width: 40%;
+    padding: 10px;
+}
 
 
 .card {
