--- a/src/main/webapp/resources/css/welcome.css
+++ b/src/main/webapp/resources/css/welcome.css
@@ -53,6 +53,11 @@ footer {
     overflow: hidden;
 }
 
+.row {
+    margin-top: 80px;
+    margin-left: 8%;
+}
+
 .row:after {
     content: "";
     display: table;
@@ -88,13 +93,145 @@ footer {
     width: 40%;
     padding: 10px;
 }
-
-
 .card {
     box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
     background-color: #ffffff;
     padding: 12px;
     margin: 10px;
+}
+
+#navbar {
+    height: 48px;
+}
+
+#logoLi {
+    margin-left: 15px;
+}
+
+#logoP {
+    color: white;
+    font-weight:bold;
+    margin-right: 15px;
+    margin-top: 10px;
+    font-size: 22px;
+}
+
+#logoutP {
+    text-align: right;
+    margin-right: 5px;
+    color: white;
+}
+
+#favoriteCol {
+    margin-left: 20%;
+}
+#profileCol {
+    margin-left: 10%;
+    width:70%;
+}
+#editProfile {
+    background-color: #3b5998;
+    color: white;
+    margin-left: 41%;
+}
+
+@media only screen and (max-width: 600px) {
+    .row {
+        margin: 5%;
+    }
+    .column-left {
+        display: none;
+    }
+    .column-right {
+        display: none;
+    }
+    .column-middle {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    .card {
+        margin-top: 20px;
+        width: 95%;
+    }
+    #navbar {
+        font-size: 15px;
+        height: 30px;
+    }
+    #logoLi {
+        display: none;
+    }
+    #logoutP {
+        display: none;
+    }
+    li a{
+        padding: 5px;
+    }
+    .column-left2 {
+        padding: 0px;
+        width: 100%;
+    }
+    .column-right2 {
+        padding: 0px;
+        width: 100%;
+    }
+    #friendRow {
+        margin-left: 3%;
+        margin-top: 5%;
+    }
+    #favoriteCol {
+        margin: 0px;
+        width: 100%;
+        padding: 0px;
+    }
+    #profileCol{
+        margin: 0px;
+        width: 100%;
+    }
+    #editProfile {
+        margin: 20%;
+    }
+
+}
+@media only screen and (min-width:600px)  and (max-width: 1100px) {
+    .row {
+        margin: 5%;
+    }
+    .column-left {
+        display: none;
+    }
+    .column-right {
+        display: none;
+    }
+    .column-middle {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    .card {
+        margin-top: 20px;
+        width: 95%;
+    }
+    #logoutP {
+        display: none;
+    }
+    .column-left2 {
+        padding: 0px;
+        width: 100%;
+    }
+    .column-right2 {
+        padding: 0px;
+        width: 100%;
+    }
+    #favoriteCol {
+        margin: 0px;
+        width: 100%;
+        padding: 0px;
+    }
+    #profileCol{
+        margin: 10%;
+        width: 80%;
+    }
 }
 
 
